Add divs to form section and add action and method to form element

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="form-box">
                 <h3 class="form-header">Let's do this</h3>
-                <form class="form-section">
+                <form action="#" method="get" class="form-section" >
                     <div class="form-col-1">
                         <div>
                             <label for="first-name">First Name</label>
@@ -60,7 +60,7 @@
 
             <div class="submit-section">
                 <button type="submit">Create Account</button>
-                <p>Already have an account? <a>Log in</a></p>
+                <p>Already have an account? <a href="#">Log in</a></p>
             </div>
         </div>
         </form>
