--- a/index.html
+++ b/index.html
@@ -11,6 +11,42 @@
 </head>
 
 <body>
+    <div class="main-page">
+        <header class="header-container">
+            <div class="logo-container">
+                <div id="logo"><img src="" alt="Odin Logo"></div>
+                <span id="logo-title">Odin</span>
+            </div>
+            <div class="photo-creds">
+                <p>Photo by name from this place</p>
+            </div>
+        </header>
+        <main class="main content">
+            <div class="main-text-container">
+                <p>This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Necessitatibus, commodi! Sign up now to get started.</p>
+                <p> you <em>know</em> you want to.</p>
+            </div>
+            <div class="form-container">
+                <form action="#" method="get">
+                    <div class="form-col-1">
+                        <table>
+
+                        </table>
+                    </div>
+                    <div class="form-col-2">
+                        <table>
+
+                        </table>
+                    </div>
+            </div>
+            <div class="button container">
+                <button type="submit">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
+            </form>
+        </main>
+    </div>
 
 </body>
 
