--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main-page">
         <header class="header-container">
             <div class="logo-container">
-                <div id="logo"><img src="" alt="Odin Logo"></div>
+                <div id="logo"><img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" alt="Odin Logo"></div>
                 <span id="logo-title">Odin</span>
             </div>
             <div class="photo-creds">
