fix typos in html and save progress in main content styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>Photo by name from this place</p>
             </div>
         </header>
-        <main class="main content">
+        <main class="main-content">
             <div class="main-text-container">
                 <p>This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Necessitatibus, commodi! Sign up now to get started.</p>
