Add header to form and change some font styling

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
         </header>
         <main class="main-content">
             <div class="main-text-container">
-                <p>This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Necessitatibus, commodi! Sign up now to get started.</p>
+                <p>This is not a real online service! You need something like this in your life
+                    to help you realize your deepest dreams. Sign up now to get started.</p>
                 <p> you <em>know</em> you want to.</p>
             </div>
             <div class="form-container">
+                <h3>Let's do this!</h3>
                 <form action="#" method="get">
                     <div class="form-col-1">
+                        
                         <table>
                             <tr>
                                <td> <label for="first-name">First Name</label></td>
