Fix typo in html and finish styling button content for now

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </table>
                     </div>
             </div>
-            <div class="button container">
+            <div class="button-container">
                 <button type="submit">Create Account</button>
                 <p>Already have an account? <a href="#">Log in</a></p>
             </div>
