take out required attr. and add focus class to inputs

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
                                <td> <label for="first-name">First Name</label></td>
                             </tr>
                             <tr>
-                                <td><input type="text" name="first-name" id="first-name" required></td>
+                                <td><input type="text" name="first-name" id="first-name" ></td>
                             </tr>
 
                             <tr>
                                 <td><label for="email">Email</label></td>
                             </tr>
                             <tr>
-                                <td><input type="email" name="email" id="email" required></td>
+                                <td><input type="email" name="email" id="email" ></td>
                             </tr>
                             <tr>
                                 <td><label for="pass">Password</label></td>
                             </tr>
                             <tr>
-                                <td><input type="password" name="pass" id="pass" required></td>
+                                <td><input type="password" name="pass" id="pass" ></td>
                             </tr>
                         </table>
                     </div>
@@ -60,20 +60,20 @@
                                 <td> <label for="last-name">Last Name</label></td>
                              </tr>
                              <tr>
-                                 <td><input type="text" name="last-name" id="last-name" required></td>
+                                 <td><input type="text" name="last-name" id="last-name" ></td>
                              </tr>
  
                              <tr>
                                  <td><label for="tel">Phone Number</label></td>
                              </tr>
                              <tr>
-                                 <td><input type="tel" name="tel" id="tel" required></td>
+                                 <td><input type="tel" name="tel" id="tel" ></td>
                              </tr>
                              <tr>
                                  <td><label for="confirm-pass">Confirm Password</label></td>
                              </tr>
                              <tr>
-                                 <td><input type="password" name="confirm-pass" id="confirm-pass" required></td>
+                                 <td><input type="password" name="confirm-pass" id="confirm-pass" ></td>
                              </tr>
                         </table>
                     </div>
