--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
             </div>
             <div class="button-container">
-                <button type="submit">Create Account</button>
+                <button type="submit" onclick=matchCheck()>Create Account</button>
                 <p>Already have an account? <a href="#">Log in</a></p>
             </div>
             </form>
