--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main class="main-content">
             <div class="main-text-container">
                 <p>This is not a real online service! You need something like this in your life
-                    to help you realize your deepest dreams. Sign up now to get started.</p>
+                    to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                 <p> you <em>know</em> you want to.</p>
             </div>
             <div class="form-container">
